k8s/phpmyadmin/service.yaml
# k8s/phpmyadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: wordpress-stack
spec: 
  type: NodePort
  selector: 
    app: phpmyadmin
  ports:
  - port: 80
    targetPort: 80 
    nodePort: 30083
    protocol: TCP
